add menu content

--- a/src/component/content/content.module.scss
+++ b/src/component/content/content.module.scss
@@ -4,6 +4,9 @@
     padding: 0 2rem 3rem 2rem;
     gap: 2rem;
 }
+.menu {
+    margin: 2rem 5rem 10rem 2rem;
+}
 .cardNumber {
     border: 2px solid;
     text-align: center;
