import react form

--- a/src/component/content/content.module.scss
+++ b/src/component/content/content.module.scss
@@ -16,7 +16,7 @@
 .inputGroup {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: end;
     gap: 2rem;
 }
 .cvc {
