--- a/pages/home/index.module.scss
+++ b/pages/home/index.module.scss
@@ -2,12 +2,6 @@
     border: 2px solid;
     margin: 10% 30%;
 }
-.menu {
+.content {
     margin: 2rem 5rem 18rem 2rem;
-}
-.link {
-    cursor: pointer;
-}
-.icon {
-    cursor: pointer;
 }
