--- a/src/component/content/content.module.scss
+++ b/src/component/content/content.module.scss
@@ -39,7 +39,7 @@
 .message {
     font-size: 14px;
     color:red;
-    text-align: flex-end;
+    text-align: end;
 }
 .submit {
     border: 2px solid;
