--- a/src/component/content/content.module.scss
+++ b/src/component/content/content.module.scss
@@ -27,13 +27,13 @@
 .cvc {
     border: 2px solid;
     text-align: center;
-    padding: 1rem 0;
+    height: 2.5rem;
     width: 8rem;
 }
 .expiry {
     border: 2px solid;
     text-align: center;
-    padding: 1rem 0;
+    height: 2.5rem;
     width: 8rem;
 }
 .message {
