--- a/src/component/navigation/navigation.module.scss
+++ b/src/component/navigation/navigation.module.scss
@@ -6,10 +6,13 @@
     margin: auto;
     padding: 1rem 0;
 }
+.iconBox {
+    padding: 4px
+}
 .heading {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0.5rem 2rem;
+    padding: 20px 24px;
     border-bottom: 2px solid;
 }
